# multibench

./: .gitignore  README.md  assignment_mosi.py  assignment_readme.md  coverage.xml  pyproject.toml  requirements.txt  tutorial.md
.github/: copilot-instructions.md
.github/workflows/: docs.yml  workflow.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-03-02_05-02-16Z-command-name-terminal-setup.md  2026-03-26_12-28-52Z.md  2026-04-04_05-49-49Z-generate-a-file-named.md  2026-04-24_11-11-47Z.md  2026-04-24_11-19-16Z-don-t-the-user.md
data/: README.md
datasets/affect/: GLOVE_README.md  get_bert_embedding.py  get_data.py  get_raw_data.py  glove_loader.py
datasets/gentle_push/: data_loader.py
datasets/imdb/: get_data.py  vgg.py
eval_scripts/: complexity.py  performance.py  robustness.py
examples/: MultiBench_Colab_Part_1_MOSI.ipynb  MultiBench_Colab_Part_2_MFAS.ipynb  MultiBench_Colab_Part_3_MCTN.ipynb  Multibench_Example_Usage.py  Multibench_Example_Usage_Colab.ipynb  Multibench_Example_Usage_Jupyter_Part_1_MOSI.ipynb  Multibench_Example_Usage_Jupyter_Part_2_MFAS.ipynb  Multibench_Example_Usage_Jupyter_Part_3_MCTN.ipynb  Multibench_Example_Usage_Part_1_MOSI.py  Multibench_Example_Usage_Part_2_MFAS.py  Multibench_Example_Usage_Part_3_MCTN.py  README.md
fusions/: MCTN.py  MVAE.py  common_fusions.py  mult.py  searchable.py
objective_functions/: contrast.py  objectives_for_supervised_learning.py  recon.py  regularization.py
private_test_scripts/: all_in_one.py  avarch.py  avcca.py  avcon.py  avgb.py  avlrtf.py  avmfm.py  avmftest.py  avmi.py  avmvae.py  avsimp.py  avuni.py  memtest.py  memtest_imdb.py  mimic_MVAE_finetune.py  mimic_multitask.py  mimic_multitask_tester.py  mimic_tensor_fusion.py  mimicarch.py  mimicarchtest.py  mimicgradientblend.py  mimiclrtf.py  mimicmfm.py  mimicmi.py  mimicmvae.py  mimicnl.py  mimicuni.py
results/: assignment_results.json  metrics_comparison.csv
robustness/: all_in_one.py  audio_robust.py  tabular_robust.py  visual_robust.py
special/: kinetics_audio_unimodal.py  kinetics_gradient_blend.py  kinetics_simple_late_fusion.py  kinetics_video_unimodal.py  kinetics_video_unimodal_16.py  kinetics_video_unimodal_feature_gen.py  kinetics_video_unimodal_feature_only.py
tests/: test_Supervised_Learning.py  test_common.py  test_eval_scripts.py  test_evaluation_metric.py  test_fusion.py  test_helper_modules.py  test_integration.py  test_objective_fns.py  test_robotics_utils.py  test_robustness.py  test_scheduler.py  test_search_tools.py  test_sensor_fusion_utils.py  test_surrogate.py
training_structures/: MCTN_Level2.py  Supervised_Learning.py  architecture_search.py  gradient_blend.py  unimodal.py
unimodals/: MVAE.py  common_models.py  res3d.py
utils/: device.py  search_tools.py  surrogate.py  verify.py
(+241 files in other folders)
