[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multibench"
version = "1.0.0"
description = "Standardized toolkit for multimodal deep learning research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "memory-profiler",
    "scikit-learn",
    "scipy<1.17",
    "matplotlib",
    "h5py",
    "tqdm",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["fusions*", "unimodals*", "training_structures*", "datasets*", "robustness*", "objective_functions*", "eval_scripts*", "utils*"]
